--- a/Quantitative Trading - How to Build Your Own Algorithmic Trading Business/example7_2.ipynb
+++ b/Quantitative Trading - How to Build Your Own Algorithmic Trading Business/example7_2.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from statsmodels.api import OLS"
+    "from statsmodels.tsa.stattools import adfuller"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1=pd.read_excel('GLD.xls')"
+    "from statsmodels.api import OLS"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2=pd.read_excel('GDX.xls')"
+    "df1=pd.read_excel('GLD.xls')"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.merge(df1, df2, on='Date', suffixes=('_GLD', '_GDX'))"
+    "df2=pd.read_excel('GDX.xls')"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.set_index('Date', inplace=True)"
+    "df=pd.merge(df1, df2, on='Date', suffixes=('_GLD', '_GDX'))"
    ]
   },
   {
@@ -94,12 +94,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.sort_index(inplace=True)"
+    "df.set_index('Date', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sort_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +364,7 @@
        "[385 rows x 12 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -411,13 +420,80 @@
        " array([-3.94060523, -3.36058133, -3.06139039]))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(coint_t, pvalue, crit_value) # abs(t-stat) > critical value at 95%. pvalue says probability of null hypothesis (of no cointegration) is only 1.8%"
+    "# abs(t-stat) > critical value at 95%.\n",
+    "# pvalue says probability of null hypothesis (of no cointegration) is only 1.8%\n",
+    "(coint_t, pvalue, crit_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Augmented Dickey–Fuller test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date\n",
+       "2006-05-23    28.53\n",
+       "2006-05-24    27.65\n",
+       "2006-05-25    26.49\n",
+       "2006-05-26    26.66\n",
+       "2006-05-30    27.05\n",
+       "              ...  \n",
+       "2007-05-17    26.80\n",
+       "2007-05-18    26.51\n",
+       "2007-05-21    26.20\n",
+       "2007-05-22    26.34\n",
+       "2007-05-23    26.22\n",
+       "Length: 252, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff_df = df['Adj Close_GLD'] - df['Adj Close_GDX']\n",
+    "diff_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.9992750177619338,\n",
+       " 0.2868910690633688,\n",
+       " {'1%': -3.4573260719088132,\n",
+       "  '5%': -2.873410402808354,\n",
+       "  '10%': -2.573095980841316})"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(adf_t, pvalue, _, _, crit_value, _) = adfuller(diff_df)\n",
+    "(adf_t, pvalue, crit_value)"
    ]
   },
   {
@@ -429,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +542,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,16 +569,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x125517040>]"
+       "[<matplotlib.lines.Line2D at 0x13957c820>]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
