[algo trading] Example 2.3, output critical values

--- a/Algorithmic Trading - Winning Strategies and Their Rationale/Example2_3_Using_the_Variance_Ratio_Test_for_Stationarity.ipynb
+++ b/Algorithmic Trading - Winning Strategies and Their Rationale/Example2_3_Using_the_Variance_Ratio_Test_for_Stationarity.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x13ea647d0>]"
+       "[<matplotlib.lines.Line2D at 0x12eefb750>]"
       ]
      },
      "execution_count": 1,
@@ -92,20 +92,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Null Hypothesis: The process is a random walk.\n",
+      "Alternative Hypothesis: The process is not a random walk.\n",
+      "\n",
       "     Variance-Ratio Test Results     \n",
       "=====================================\n",
-      "Test Statistic                  0.023\n",
-      "P-value                         0.982\n",
-      "Lags                                5\n",
+      "Test Statistic                 -0.201\n",
+      "P-value                         0.841\n",
+      "Lags                              100\n",
       "-------------------------------------\n",
       "\n",
-      "Computed with overlapping blocks (de-biased)\n"
+      "Computed with overlapping blocks (de-biased)\n",
+      "\n",
+      "Critical Values: {'1%': -2.3263478740408408, '5%': -1.6448536269514729, '10%': -1.2815515655446004, '90%': 1.2815515655446004, '95%': 1.6448536269514722, '99%': 2.3263478740408408}\n"
      ]
     }
    ],
    "source": [
-    "vr = VarianceRatio(y, 5)\n",
-    "print(vr.summary().as_text())"
+    "vr = VarianceRatio(y, lags=100)\n",
+    "print(f\"Null Hypothesis: {vr.null_hypothesis}\")\n",
+    "print(f\"Alternative Hypothesis: {vr.alternative_hypothesis}\\n\")\n",
+    "print(f\"{vr.summary()}\\n\")\n",
+    "print(f\"Critical Values: {vr.critical_values}\")"
    ]
   },
   {
@@ -133,7 +141,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x13eaaa690>]"
+       "[<matplotlib.lines.Line2D at 0x10597f810>]"
       ]
      },
      "execution_count": 3,
@@ -170,20 +178,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Null Hypothesis: The process is a random walk.\n",
+      "Alternative Hypothesis: The process is not a random walk.\n",
+      "\n",
       "     Variance-Ratio Test Results     \n",
       "=====================================\n",
-      "Test Statistic                 -0.541\n",
-      "P-value                         0.589\n",
-      "Lags                                5\n",
+      "Test Statistic                 -2.870\n",
+      "P-value                         0.004\n",
+      "Lags                              100\n",
       "-------------------------------------\n",
       "\n",
-      "Computed with overlapping blocks (de-biased)\n"
+      "Computed with overlapping blocks (de-biased)\n",
+      "\n",
+      "Critical Values: {'1%': -2.3263478740408408, '5%': -1.6448536269514729, '10%': -1.2815515655446004, '90%': 1.2815515655446004, '95%': 1.6448536269514722, '99%': 2.3263478740408408}\n"
      ]
     }
    ],
    "source": [
-    "vr = VarianceRatio(y2, 5)\n",
-    "print(vr.summary().as_text())"
+    "vr = VarianceRatio(y2, lags=100)\n",
+    "print(f\"Null Hypothesis: {vr.null_hypothesis}\")\n",
+    "print(f\"Alternative Hypothesis: {vr.alternative_hypothesis}\\n\")\n",
+    "print(f\"{vr.summary()}\\n\")\n",
+    "print(f\"Critical Values: {vr.critical_values}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "039619fb",
+   "metadata": {},
+   "source": [
+    "The test statistic measures the strength of evidence against the null hypothesis of a random walk in the time series. In this case, the test statistic is -2.870.\n",
+    "\n",
+    "The p-value represents the probability of observing a test statistic as extreme as or more extreme than the observed value, assuming the null hypothesis is true. In your case, the p-value is 0.004, which is below the significance level of 0.05. This suggests strong evidence against the null hypothesis and indicates the presence of some predictability or non-randomness in the time series.\n",
+    "\n",
+    "The critical values provide thresholds for comparison with the test statistic. If the test statistic falls outside the range defined by the critical values, it provides further evidence against the null hypothesis. In your results, the critical values at different significance levels are provided.\n",
+    "\n",
+    "Based on the given information, it appears that the Variance Ratio Test suggests evidence against the null hypothesis of a random walk in the time series. The small p-value indicates that the observed test statistic is unlikely to occur under the assumption of a random walk. The negative test statistic suggests some degree of mean reversion or predictability in the series."
    ]
   }
  ],
