[algo trading] Example 2.4: Computing Half-Life for Mean Reversion

--- a/Algorithmic Trading - Winning Strategies and Their Rationale/Example2_4_Computing_Half-Life_for_Mean_Reversion.ipynb
+++ b/Algorithmic Trading - Winning Strategies and Their Rationale/Example2_4_Computing_Half-Life_for_Mean_Reversion.ipynb
@@ -57,7 +57,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x16e0280d0>]"
+       "[<matplotlib.lines.Line2D at 0x16a1d36d0>]"
       ]
      },
      "execution_count": 1,
@@ -136,19 +136,50 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "115.2097944851546"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "halflife = 115.209794 days\n"
+     ]
     }
    ],
    "source": [
     "halflife = -np.log(2) / theta\n",
-    "halflife.values[0]"
+    "print('halflife = %f days' % halflife.values[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4ccd51fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept    0.006273\n",
+      "prevy       -0.006016\n",
+      "dtype: float64\n",
+      "halflife = 115.209794 days\n"
+     ]
+    }
+   ],
+   "source": [
+    "# another way to calculate halflife by formula strings\n",
+    "from statsmodels.formula.api import ols\n",
+    "\n",
+    "prevy = y.shift()\n",
+    "dy = y - prevy\n",
+    "# dy = dy[1:, ]\n",
+    "# prevy = prevy[1:, ]\n",
+    "y2 = pd.concat([prevy, dy], axis=1)\n",
+    "y2.columns = ['prevy', 'dy']\n",
+    "\n",
+    "regress_results = ols(formula=\"dy ~ prevy\", data=y).fit()\n",
+    "print(regress_results.params)\n",
+    "halflife = -np.log(2) / regress_results.params['prevy']\n",
+    "print('halflife = %f days' % halflife)"
    ]
   },
   {
