[algo trading] Box 8.6 Computing Growth Rate Using CPPI

--- a/Algorithmic Trading - Winning Strategies and Their Rationale/Example8_1_Monte_Carlo_Optimize_Leverage.ipynb
+++ b/Algorithmic Trading - Winning Strategies and Their Rationale/Example8_1_Monte_Carlo_Optimize_Leverage.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "88da9625",
+   "metadata": {},
+   "source": [
+    "## Optimal Leverage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e4d9f089",
@@ -434,12 +442,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43c8db37",
+   "cell_type": "markdown",
+   "id": "6786add4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Constant Proportion Portfolio Insurance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50d683a6",
+   "metadata": {},
+   "source": [
+    "### Box 8.6 Computing Growth Rate Using CPPI\n",
+    "\n",
+    "Assume the return series is *ret_sim* and the optimal leverage is *optimalF*, both from previous calculations. Also assume the maximum drawdown allowed is $–D = –0.5$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "53f1c73e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Growth rate on simulated returns using D=0.5 of optimal leverage on full account=0.004107\n",
+      "MaxDD on simulated returns using D of optimal leverage on full account=-0.879011\n"
+     ]
+    }
+   ],
+   "source": [
+    "D=0.5\n",
+    "print('Growth rate on simulated returns using D=%3.1f of optimal leverage on full account=%f' % (D, -minusGsim(optimalF*D)))\n",
+    "maxDD, maxDDD, i=calculateMaxDD((np.cumproduct(1+optimalF*D*ret_sim)-1))\n",
+    "print('MaxDD on simulated returns using D of optimal leverage on full account=%f' % (maxDD))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f39b0a92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Growth rate on simulated returns using CPPI=0.004055\n",
+      "Growth rate on historical returns using D of optimal leverage on full account=0.003862\n",
+      "MaxDD on historical returns using D of optimal leverage on full account=-0.455783\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CPPI\n",
+    "g_cppi=0\n",
+    "drawdown=0\n",
+    "for t in range(ret_sim.shape[0]):\n",
+    "    g_cppi+=np.log(1+ret_sim[t]*D*optimalF*(1+drawdown))\n",
+    "    drawdown=min([0, (1+drawdown)*(1+ret_sim[t])-1])\n",
+    "    \n",
+    "g_cppi=g_cppi/len(ret_sim)\n",
+    "print('Growth rate on simulated returns using CPPI=%f' % g_cppi)\n",
+    "print('Growth rate on historical returns using D of optimal leverage on full account=%f' % (-minusG(optimalF*D)))\n",
+    "maxDD, maxDDD, i=calculateMaxDD((np.cumproduct(1+optimalF*D*df.values)-1))\n",
+    "print('MaxDD on historical returns using D of optimal leverage on full account=%f' % (maxDD))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "57886019",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Growth rate on historical returns CPPI=0.003803\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CPPI\n",
+    "g_cppi=0\n",
+    "drawdown=0\n",
+    "for t in range(df.shape[0]):\n",
+    "    g_cppi+=np.log(1+df.values[t]*D*optimalF*(1+drawdown))\n",
+    "    drawdown=min([0, (1+drawdown)*(1+df.values[t])-1])\n",
+    "    \n",
+    "g_cppi=g_cppi/len(df)\n",
+    "print('Growth rate on historical returns CPPI=%f' % (g_cppi))"
+   ]
   }
  ],
  "metadata": {
