[algo trading py] move notebook to root folder

--- a/Algorithmic Trading with Python - Quantitative Methods and Strategy Development/Ch2_Performance_Metrics.ipynb
+++ b/Algorithmic Trading with Python - Quantitative Methods and Strategy Development/Ch2_Performance_Metrics.ipynb
@@ -167,8 +167,8 @@
    "source": [
     "# load path\n",
     "import sys\n",
-    "if \"../src/\" not in sys.path:\n",
-    "    sys.path.append(\"../src/\")\n",
+    "if \"src/\" not in sys.path:\n",
+    "    sys.path.append(\"src/\")\n",
     "\n",
     "from pypm import data_io, metrics"
    ]
