[ml pattern] #10 - Increasing pattern complexity

--- a/tutorials/Machine Learning and Pattern Recognition for Algorithmic Forex and Stock Trading/08_Predicting_outcomes.ipynb
+++ b/tutorials/Machine Learning and Pattern Recognition for Algorithmic Forex and Stock Trading/08_Predicting_outcomes.ipynb
@@ -746,7 +746,7 @@
     "    patterns = pd.DataFrame(avgData['current'])\n",
     "    \n",
     "    #function to account for the average of the items in the array\n",
-    "    avgOutcome = patterns['current'].rolling(window=10).mean().shift(-(40-y))\n",
+    "    avgOutcome = patterns['current'].rolling(window=10).mean().shift(-29)\n",
     "    patterns['predicted'] = percentChange2(patterns['current'], avgOutcome)\n",
     "    \n",
     "    patterns['p1'] = percentChange2(avgData['prev10'], avgData['prev9'])\n",
