[ml pattern] #17 - Update links

--- a/tutorials/Machine Learning and Pattern Recognition for Algorithmic Forex and Stock Trading/17_Performance_issues.ipynb
+++ b/tutorials/Machine Learning and Pattern Recognition for Algorithmic Forex and Stock Trading/17_Performance_issues.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "30f69290",
+   "metadata": {},
+   "source": [
+    "## Performance issues\n",
+    "https://www.youtube.com/watch?v=HwrG_NIs35A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b6050dc3",
    "metadata": {},
    "source": [
