--- a/books/handson_ml/math_differential_calculus.ipynb
+++ b/books/handson_ml/math_differential_calculus.ipynb
@@ -5980,7 +5980,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5994,7 +5994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.12"
   },
   "pycharm": {
    "stem_cell": {
