--- a/books/handson_ml/math_linear_algebra.ipynb
+++ b/books/handson_ml/math_linear_algebra.ipynb
@@ -4635,7 +4635,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4649,7 +4649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.12"
   },
   "toc": {
    "toc_cell": false,
