#7 - Combining all S&P 500 company prices into one DataFrame

--- a/tutorials/py_programming_for_finance/06_Getting_all_company_pricing_data_in_the_SP500.ipynb
+++ b/tutorials/py_programming_for_finance/06_Getting_all_company_pricing_data_in_the_SP500.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "457c32fd",
+   "id": "0f530218",
    "metadata": {},
    "source": [
     "## Getting all company pricing data in the S&P 500\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d2d2b0",
+   "id": "68c7be8b",
    "metadata": {},
    "source": [
     "Hello and welcome to part 6 of the Python for Finance tutorial series. In the previous finance with Python tutorial, we covered how to acquire the list of companies that we're interested in (S&P 500 in our case), and now we're going to pull stock pricing data on all of them.\n",
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "96c8d43d",
+   "id": "997fb9bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88d099a1",
+   "id": "0fa1fa88",
    "metadata": {},
    "source": [
     "We're going to add a few new imports:"
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7359614c",
+   "id": "f6e65911",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9413c3fa",
+   "id": "7b690262",
    "metadata": {},
    "source": [
     "We'll use datetime to specify dates for the `pandas_datareader`, `os` is to check for, and create, directories. You already know what pandas is for!\n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7b8baf59",
+   "id": "5a18e27f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fc34f0d",
+   "id": "db947e57",
    "metadata": {},
    "source": [
     "Here's where I'll just show a quick example of one way you could handle for whether or not to reload the S&P 500 list. If we ask it to, the program will re-pull the S&P 500 list, otherwise it will just use our pickle. Now we want to prepare to grab data.\n",
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c9b5bbef",
+   "id": "37cab51a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e348d3",
+   "id": "d1ee9638",
    "metadata": {},
    "source": [
     "You could just store these datasets in the same directory as your script, but this would get pretty messy in my opinion. Now we're ready to pull the data. You already know how to do this, we did it in the very first tutorial!"
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "128d1830",
+   "id": "99423c37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32d157b9",
+   "id": "84ecc4e0",
    "metadata": {},
    "source": [
     "You will likely in time want to do some sort of `force_data_update` parameter to this function, since, right now, it will not re-pull data it already sees hit has. Since we're pulling daily data, you'd want to have this re-pulling at least the latest data. That said, if that's the case, you might be better off with using a database instead with a table per company, and then just pulling the most recent values from the Yahoo database. We'll keep things simple for now though!\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "51d00e92",
+   "id": "19210553",
    "metadata": {
     "scrolled": false
    },
@@ -230,7 +230,7 @@
       "Already have BAX\n",
       "Already have BDX\n",
       "Already have WRB\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
+      "Already have BRK-B\n",
       "Already have BBY\n",
       "Already have BIO\n",
       "Already have TECH\n",
@@ -247,7 +247,7 @@
       "Already have AVGO\n",
       "Already have BR\n",
       "Already have BRO\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
+      "Already have BF-B\n",
       "Already have BG\n",
       "Already have CHRW\n",
       "Already have CDNS\n",
@@ -670,8 +670,8 @@
       "Already have ZBH\n",
       "Already have ZION\n",
       "Already have ZTS\n",
-      "CPU times: user 290 ms, sys: 51.1 ms, total: 341 ms\n",
-      "Wall time: 1.45 s\n"
+      "CPU times: user 39.5 ms, sys: 3.95 ms, total: 43.5 ms\n",
+      "Wall time: 17.1 ms\n"
      ]
     }
    ],
@@ -712,10 +712,10 @@
     "    start = dt.datetime(2010, 1, 1)\n",
     "    end = dt.datetime.now()\n",
     "    for ticker in tickers:\n",
+    "        # e.g. BRK.B => BRK-B, BF.B => BF-B\n",
+    "        ticker = ticker.replace('.', '-')\n",
     "        # just in case your connection breaks, we'd like to save our progress!\n",
     "        if not os.path.exists('stock_dfs/{}.csv'.format(ticker)):\n",
-    "            # e.g. BRK.B => BRK-B, BF.B => BF-B\n",
-    "            ticker = ticker.replace('.', '-')\n",
     "            df = yf.download(ticker, start=start, end=end)\n",
     "            df.to_csv('stock_dfs/{}.csv'.format(ticker))\n",
     "        else:\n",
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10501387",
+   "id": "ef3ef9e6",
    "metadata": {},
    "source": [
     "Go ahead and run this. You might want to import time and add a `time.sleep(0.5)` or something if Yahoo throttles you. At the time of my writing this, Yahoo did not throttle me at all and I was able to run this all the way through without any issues. It might take you a while still, however, especially depending on your machine. The good news is, however, we wont need to do it again! In practice, again, since this is daily data, however, you might do this once a day.\n",
