[neuro] import source code

--- a/tutorials/py_auto_tech_analysis/01_Automated_Price_Trend_Lines_in_Python.ipynb
+++ b/tutorials/py_auto_tech_analysis/01_Automated_Price_Trend_Lines_in_Python.ipynb
@@ -174,8 +174,8 @@
    "outputs": [],
    "source": [
     "# Load data\n",
-    "# data = pd.read_csv('BTCUSDT86400.csv')\n",
-    "data = pd.read_csv('BTCUSDT3600.csv')\n",
+    "# data = pd.read_csv('src/BTCUSDT86400.csv')\n",
+    "data = pd.read_csv('src/BTCUSDT3600.csv')\n",
     "data['date'] = data['date'].astype('datetime64[s]')\n",
     "data = data.set_index('date')\n",
     "\n",
