--- a/tutorials/py_auto_tech_analysis/02_Algorithms_for_Automating_Chart_Pattern_Trading_in_Python.ipynb
+++ b/tutorials/py_auto_tech_analysis/02_Algorithms_for_Automating_Chart_Pattern_Trading_in_Python.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('BTCUSDT86400.csv')\n",
+    "data = pd.read_csv('src/BTCUSDT86400.csv')\n",
     "data['date'] = data['date'].astype('datetime64[s]')\n",
     "data = data.set_index('date')"
    ]
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('BTCUSDT3600.csv')\n",
+    "data = pd.read_csv('src/BTCUSDT3600.csv')\n",
     "data['date'] = data['date'].astype('datetime64[s]')\n",
     "data = data.set_index('date')"
    ]
@@ -401,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('BTCUSDT86400.csv')\n",
+    "data = pd.read_csv('src/BTCUSDT86400.csv')\n",
     "data['date'] = data['date'].astype('datetime64[s]')\n",
     "data = data.set_index('date')"
    ]
