[neuro] Automated Price Trend Lines in Python | Description

--- a/tutorials/py_auto_tech_analysis/01_Automated_Price_Trend_Lines_in_Python.ipynb
+++ b/tutorials/py_auto_tech_analysis/01_Automated_Price_Trend_Lines_in_Python.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "## Automated Price Trend Lines in Python\n",
     "\n",
-    "Automated price trend line detection using a simple gradient descent. Find trend lines on any length or section of data. Includes a function for both a single input and high/low candle prices.\n",
+    "Presenting a unique algorithm implemented in python for finding trend lines on price data. The python code shown builds a powerful trading indicator the slope of the current trend lines. I've used this indicator in the past as an input to predictive models. The algorithm could also be used as a component for recognizing chart patterns such as wedges, triangles, pennants and so on.  \n",
+    "\n",
+    "The automated support and resistance trend lines are found using a gradient descent approach.  It creates a price channel on any length of data. It has only one adjustable parameter, the number of candles in which the trend lines are fit. \n",
     "\n",
     "* Tutorial: [Automated Price Trend Lines in Python | Algorithmic Trading Indicator](https://www.youtube.com/watch?v=wbFoefnidTU)\n",
     "* Full Code: https://github.com/neurotrader888/TrendLineAutomation"
