[neuro] Algorithms for Automating Chart Pattern Trading in Python | Description

--- a/tutorials/py_auto_tech_analysis/02_Algorithms_for_Automating_Chart_Pattern_Trading_in_Python.ipynb
+++ b/tutorials/py_auto_tech_analysis/02_Algorithms_for_Automating_Chart_Pattern_Trading_in_Python.ipynb
@@ -7,6 +7,12 @@
    "source": [
     "# 3 Must-Know Algorithms for Automating Chart Pattern Trading in Python\n",
     "\n",
+    "I cover three algorithms for identifying minima and maxima in price data. Identifying local tops and bottoms is an essential step for automating many chart patterns such as the head and shoulders pattern. The local tops and bottoms are useful beyond chart patterns as well. They can be used for finding automatic identification support and resistance levels and other forms of technical analysis automation. \n",
+    "\n",
+    "The three algorithms covered are rolling window, directional change, and perceptually important points. All three have their merits and times for use. But all three are directly applicable to chart pattern recognition. Each algorithm is explained with a visualization and a python implementation is shown. Algorithmic traders should know each of these algorithms as they are useful for a variety of tasks. \n",
+    "\n",
+    "Perceptually important points origin: [Flexible time series pattern matching based on perceptually important points](https://research.polyu.edu.hk/en/publications/flexible-time-series-pattern-matching-based-on-perceptually-impor)\n",
+    "\n",
     "* Tutorial: [3 Must-Know Algorithms for Automating Chart Pattern Trading in Python](https://www.youtube.com/watch?v=X31hyMhB-3s)\n",
     "* Full Code: https://github.com/neurotrader888/TechnicalAnalysisAutomation"
    ]
