[neuro] Flag and Pennant Pattern Recognition in Python | Description

--- a/tutorials/py_auto_tech_analysis/03_Flag_and_Pennant_Pattern_Recognition_in_Python.ipynb
+++ b/tutorials/py_auto_tech_analysis/03_Flag_and_Pennant_Pattern_Recognition_in_Python.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Flag and Pennant Pattern Recognition in Python\n",
     "\n",
+    "We automate the flag and pennant chart patterns with python and show the code. Then backtest the performance of the patterns. We use the algorithms shown in my previous videos to build rule based pattern recognition. The pattern recognition is rather lenient to detect many patterns. Both of the chart patterns describe a brief interruption in a trend before continuing. A continuation pattern they call it. I show two different identification algorithms. The size of the patterns found can be controlled with a single parameter.  Both pattern recognition systems share similar results. The identified bear and bull flags performed quite well as an entry point for trades using hourly bitcoin data. While the bull and bear pennants are not very consistent. The pennants are found more rarely than the flags. The win rates of the bear and bull flags are above 60% on many of the parameter values and are consistent across parameter values suggesting robustness of the pattern. \n",
+    "\n",
     "* Tutorial: [Flag and Pennant Pattern Recognition in Python | Algorithmic Trading Strategy](https://www.youtube.com/watch?v=Lb5SPCTp4uY)\n",
     "* Full Code: https://github.com/neurotrader888/TechnicalAnalysisAutomation"
    ]
