[neuro] merge BTCUSDT data

--- a/tutorials/py_auto_tech_analysis/06_Ordinal_Patterns_and_Permutation_Entropy.ipynb
+++ b/tutorials/py_auto_tech_analysis/06_Ordinal_Patterns_and_Permutation_Entropy.ipynb
@@ -110,7 +110,7 @@
    "source": [
     "# Load data\n",
     "\n",
-    "data = pd.read_csv('src/BTCUSDT3600V.csv')\n",
+    "data = pd.read_csv('src/BTCUSDT3600.csv')\n",
     "data['date'] = data['date'].astype('datetime64[s]')\n",
     "data = data.set_index('date')"
    ]
