--- a/tutorials/py_auto_tech_analysis/11_Volume_Spread_Analysis_with_Python.ipynb
+++ b/tutorials/py_auto_tech_analysis/11_Volume_Spread_Analysis_with_Python.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "# Load data\n",
-    "data = pd.read_csv('src/BTCUSDT3600V.csv')\n",
+    "data = pd.read_csv('src/BTCUSDT3600.csv')\n",
     "data['date'] = data['date'].astype('datetime64[s]')\n",
     "data = data.set_index('date')"
    ]
@@ -179,7 +179,7 @@
    "outputs": [],
    "source": [
     "# Load data\n",
-    "data = pd.read_csv('src/BTCUSDT3600V.csv')\n",
+    "data = pd.read_csv('src/BTCUSDT3600.csv')\n",
     "data['date'] = data['date'].astype('datetime64[s]')\n",
     "data = data.set_index('date')"
    ]
@@ -300,7 +300,7 @@
    "outputs": [],
    "source": [
     "# Load data\n",
-    "data = pd.read_csv('src/BTCUSDT3600V.csv')\n",
+    "data = pd.read_csv('src/BTCUSDT3600.csv')\n",
     "data['date'] = data['date'].astype('datetime64[s]')\n",
     "data = data.set_index('date')"
    ]
